@@ -25,9 +25,9 @@ Alien::Alien                                   = 0.02
 Alien::autoconf                                = 0.14
 Alien::automake                                = 0.14
 Alien::Autotools                               = 1.04
-Alien::Base::ModuleBuild                       = 1.03
+Alien::Base::ModuleBuild                       = 1.04
 Alien::bison                                   = 0.19
-Alien::Build                                   = 1.42
+Alien::Build                                   = 1.43
 Alien::Build::Git                              = 0.06
 Alien::Build::MB                               = 0.05
 Alien::Build::Plugin::Decode::SourceForge      = 0.01
@@ -40,18 +40,18 @@ Alien::CMake                                   = 0.11
 Alien::cmake3                                  = 0.04
 Alien::curl                                    = 0.06
 Alien::Editline                                = 0.08
-Alien::FFI                                     = 0.19
+Alien::FFI                                     = 0.21
 Alien::flex                                    = 0.12
 Alien::gmake                                   = 0.21
-Alien::GMP                                     = 1.10
+Alien::GMP                                     = 1.11
 Alien::gzip                                    = 0.05
 Alien::Hunspell                                = 0.11
 Alien::Libarchive3                             = 0.29
-Alien::Libbz2                                  = 0.22
+Alien::Libbz2                                  = 0.23
 Alien::LibreSSL                                = 0.02
 Alien::libtool                                 = 0.11
 Alien::libtool24                               = 0.06
-Alien::LibYAML                                 = 2.01
+Alien::LibYAML                                 = 2.04
 Alien::Libxml2                                 = 0.03
 Alien::LZO                                     = 0.02
 Alien::m4                                      = 0.17
@@ -64,14 +64,14 @@ Alien::pkgconf                                 = 0.11
 Alien::Role::Alt                               = 0.03
 Alien::Role::Dino                              = 0.06
 Alien::xz                                      = 0.06
-;Alt::Alien::FFI::System                       = 0.16
+;Alt::Alien::FFI::System                       = 0.21
 ;Alt::ExtUtils::PkgConfig::PLICEASE            = 1.15
-;Alt::FFI::libffi                              = 0.01
+;Alt::FFI::libffi                              = 0.04
 AnyEvent::Finger                               = 0.10
 AnyEvent::FTP                                  = 0.16
 AnyEvent::Ident                                = 0.07
 AnyEvent::Open3::Simple                        = 0.86
-AnyEvent::WebSocket::Client                    = 0.46
+AnyEvent::WebSocket::Client                    = 0.48
 App::af                                        = 0.15
 App::cpangitify                                = 0.17
 App::Prove::Plugin::TermTable                  = 0.02
@@ -86,7 +86,7 @@ Class::Inspector                               = 1.32
 Dist::Zilla::App::Command::aliendeps           = 0.03
 Dist::Zilla::Plugin::AlienBuild                = 0.24
 Dist::Zilla::Plugin::Alt                       = 0.05
-Dist::Zilla::Plugin::Author::Plicease          = 2.25
+Dist::Zilla::Plugin::Author::Plicease          = 2.26
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
 Dist::Zilla::Plugin::InsertExample             = 0.09
@@ -95,20 +95,21 @@ Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.12
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
-Dist::Zilla::PluginBundle::Author::Plicease    = 2.25
+Dist::Zilla::PluginBundle::Author::Plicease    = 2.26
 Env::ShellWords                                = 0.02
-FFI                                            = 1.10
-FFI::CheckLib                                  = 0.18
+FFI                                            = 1.12
+FFI::CheckLib                                  = 0.20
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 0.48
+FFI::Platypus                                  = 0.50
 FFI::Platypus::Lang::CPP                       = 0.04
-FFI::Platypus::Lang::CPP::Demangle::XS         = 0.02
+FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.07
 FFI::Platypus::Lang::Pascal                    = 0.05
 FFI::Platypus::Lang::Rust                      = 0.04
 FFI::Platypus::Type::StringArray               = 0.01
-FFI::TinyCC                                    = 0.26
-FFI::Util                                      = 0.16
+FFI::TinyCC                                    = 0.28
+FFI::TinyCC::Inline                            = 0.28
+FFI::Util                                      = 0.17
 File::LibMagic::FFI                            = 0.04
 File::Listing::Ftpcopy                         = 0.08
 File::ShareDir::Dist                           = 0.05
@@ -133,6 +134,8 @@ Test::Fixme                                    = 0.16
 Test::Script                                   = 1.23
 Test::Version                                  = 2.09
 Test2::Plugin::FauxHomeDir                     = 0.04
+Test2::Tools::HTTP                             = 0.08
+Test2::Tools::HTTP::UA::Mojo                   = 0.03
 Test2::Tools::JSON::Pointer                    = 0.01
 Test2::Tools::URL                              = 0.03
 Text::Hunspell::FFI                            = 0.02
