@@ -109,6 +109,7 @@ $modules{$_} = $_ for qw(
   FFI::Platypus::Lang::Rust
   FFI::Platypus::Type::StringArray
   FFI::TinyCC
+  FFI::TinyCC::Inline
   FFI::Util
   File::LibMagic::FFI
   File::Listing
@@ -140,6 +141,8 @@ $modules{$_} = $_ for qw(
   Template
   Term::EditLine
   Test2::Plugin::FauxHomeDir
+  Test2::Tools::HTTP
+  Test2::Tools::HTTP::UA::Mojo
   Test2::Tools::JSON::Pointer
   Test2::Tools::URL
   Test::Alien::CPP
